--- a/src/app/components/public/section-banner-about-me/SectionBannerAboutMeComponent.module.scss
+++ b/src/app/components/public/section-banner-about-me/SectionBannerAboutMeComponent.module.scss
@@ -1,3 +1,10 @@
 .container{
     width: 100%;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    .content{
+         margin-top: 100px;
+    }
 }
