--- a/src/app/components/public/card-component/CardComponent.module.scss
+++ b/src/app/components/public/card-component/CardComponent.module.scss
@@ -1,40 +1,46 @@
 .card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  margin: 10px;
+  width: 210px;
+  height: 248px;
+  padding: 20px 0px;
+  background: #ffffff1f;
+  box-shadow: 0px 4px 4px 0px #ffffff1a;
+
+
+  .iconContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+
+    .cardIcon {
+      height: 50px;
+      margin: 12px;
+    }
+  }
+
+  .cardContent {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 10px;
-    width: 200px;
-  
-    .iconContainer {
-      display: flex;
-      justify-content: space-evenly;
-      flex-wrap: wrap;
+    justify-content: space-between;
 
-      .cardIcon {
-        width: 50px;
-        height: 50px;
-        margin: 6px;
-      }
+    .cardTitle {
+      width: 200px;
+      height: 48px;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
     }
-  
-    .cardContent {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-  
-      .cardTitle {
-        font-size: 20px;
-        font-weight: bold;
-        margin: 10px 0;
-        text-align: center;
-      }
-  
-      .cardDescription {
-        font-size: 16px;
-        text-align: center;
-      }
+
+    .cardDescription {
+      font-size: 16px;
+      text-align: center;
     }
+  }
 }
