--- a/src/app/components/public/section-expertise-about-me/SectionExpertiseAboutMeComponent.module.scss
+++ b/src/app/components/public/section-expertise-about-me/SectionExpertiseAboutMeComponent.module.scss
@@ -1,3 +1,10 @@
 .container{
     width: 100%;
+
+    .card-wrapper{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    }
 }
