--- a/src/app/layouts/public/PublicLayout.module.scss
+++ b/src/app/layouts/public/PublicLayout.module.scss
@@ -1,3 +1,9 @@
 .container{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .page-wrapper{
+        width: 100%;
+    }
     }
