--- a/src/app/components/public/public-header/PublicHeaderComponent.module.scss
+++ b/src/app/components/public/public-header/PublicHeaderComponent.module.scss
@@ -1,9 +1,36 @@
 .container {
-    display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 9;
-    justify-content: space-between;
-    margin: 50px 50px;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  z-index: 9;
+  padding: 10px;
+
+  &.scrolled {
+    background: rgba(255, 255, 255, 0.75);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06);
+    backdrop-filter: blur(8px);
+}
+
+  p {
+    margin-left: 20px;
   }
+
+  button {
+    display: inline-flex;
+    align-items: center;
+    margin-right: 20px;
+    padding: 12px;
+    border-radius: 6px;
+    border: none;
+    background: #0C8CE9;
+    color: white;
+    font-size: 14px;
+    letter-spacing: 0.56px;
+
+    &:active  {
+      background: #F78F14;
+      color: white;
+    }
+  }
+}
