changes made to the expertise section

--- a/src/app/components/public/section-banner-about-me/SectionBannerAboutMeComponent.module.scss
+++ b/src/app/components/public/section-banner-about-me/SectionBannerAboutMeComponent.module.scss
@@ -55,8 +55,9 @@
 
                 button {
                     display: inline-flex;
+                    width: 142px;
                     align-items: center;
-                    margin-right: 12px;
+                    margin-right: 24px;
                     padding: 12px;
                     border-radius: 6px;
                     border: none;
