--- a/src/app/components/public/card-component/CardComponent.module.scss
+++ b/src/app/components/public/card-component/CardComponent.module.scss
@@ -4,12 +4,13 @@
   align-items: center;
   border: 1px solid #ccc;
   border-radius: 10px;
-  margin: 10px;
+  backdrop-filter: blur(2px);
+  margin: 16px;
   width: 210px;
   height: 248px;
-  padding: 20px 0px;
-  background: #ffffff1f;
-  box-shadow: 0px 4px 4px 0px #ffffff1a;
+  padding: 24px 0px;
+  background: #ffffff27;
+  box-shadow: 0px 4px 4px 0px #ffffff55;
 
 
   .iconContainer {
@@ -34,6 +35,7 @@
       width: 200px;
       height: 48px;
       font-size: 20px;
+      color: white;
       font-weight: bold;
       text-align: center;
     }
