--- a/src/app/components/public/section-expertise-about-me/SectionExpertiseAboutMeComponent.module.scss
+++ b/src/app/components/public/section-expertise-about-me/SectionExpertiseAboutMeComponent.module.scss
@@ -1,10 +1,23 @@
-.container{
+.container {
     width: 100%;
-
-    .card-wrapper{
     display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background: url('../../../../assets/images/ImgBanner.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    padding: 64px 0px;
+    color: white;
+
+
+    .card-wrapper {
+        margin-top: 32px;
+        display: flex;
+        max-width: 900px;
+        flex-wrap: wrap;
+        justify-content: center;
+
     }
 }
