--- a/src/app/components/public/card-component/CardComponent.module.scss
+++ b/src/app/components/public/card-component/CardComponent.module.scss
@@ -12,7 +12,6 @@
   background: #ffffff27;
   box-shadow: 0px 4px 4px 0px #ffffff55;
 
-
   .iconContainer {
     display: flex;
     justify-content: space-evenly;
@@ -43,6 +42,25 @@
     .cardDescription {
       font-size: 16px;
       text-align: center;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    width: 164px;
+    margin: 12px;
+
+    .iconContainer {
+      .cardIcon {
+        height: 32px;
+      }
+    }
+
+    .cardContent {
+      .cardTitle {
+        width: 100%;
+      }
     }
   }
 }
