--- a/src/app/components/public/public-footer/PublicFooterComponent.module.scss
+++ b/src/app/components/public/public-footer/PublicFooterComponent.module.scss
@@ -1,3 +1,7 @@
-.container{
+.container {
     width: 100%;
-    }
+    display: flex;
+    height: 64px;
+    justify-content: center;
+    border-top: 1px solid rgba(128, 128, 128, 0.199);
+}
