changes made to the employement section

--- a/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
+++ b/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
@@ -1,43 +1,63 @@
 .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 64px 0px;
+    background-size: cover;
 
-        
-    .page-wrapper {
+    .content-wrapper {
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 32px;
 
-        img {
-            height: 50px;
-        }
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
-        h3 {
-            font-weight: 500;
-        }
-        p{
-            font-size: 14px;
-        }
-        ul{
-            font-size: 16px;
-            font-weight: 500;
-            list-style: none;
-            margin-bottom: 6px;
-        }
-        li{
-            font-size: 14px;
-            font-weight: 400;
-        }
+            .logo {
+                height: 50px;
+            }
 
-    }
+            .list-container {
 
-}
-@media (max-width: 480px){
-    .container{
-        padding: 64px 0px;
+                margin-top: 32px;
+
+                .list {
+                    display: flex;
+                    overflow-y: scroll;
+                    scrollbar-width: none; 
+                    -ms-overflow-style: none; 
+                    height: 64px;
+                    flex-direction: column;
+                    align-items: center;
+
+                    &::-webkit-scrollbar{
+                        display: none;
+                    }
+
+                    .item{
+                        margin-top: 24px;
+                    }
+                }
+
+                .dots-container {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-top: 10px;
+
+                    .dot {
+                        height: 10px;
+                        width: 10px;
+                        background-color: #bbb;
+                        border-radius: 50%;
+                        margin: 0 5px;
+                        cursor: pointer;
+
+                        &:hover {
+                            background-color: #717171;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
