--- a/src/app/components/public/image-gallery/ImageGalleryComponent.module.scss
+++ b/src/app/components/public/image-gallery/ImageGalleryComponent.module.scss
@@ -1,5 +1,15 @@
-.image {
-    width: 100%;
-    height: 360px;
-    object-fit: cover;
+.gallery{
+width: 100%;
+height: 75vh;
+display: flex;
+background-position: center;
+background-size: cover;
+background-repeat: no-repeat;
+align-items: center;
+justify-content: center;
+
+    .cardDescription{
+        color: white;
+        text-align: center;
+    }
 }
