--- a/src/app/components/public/section-contact-about-me/SectionContactAboutMeComponet.module.scss
+++ b/src/app/components/public/section-contact-about-me/SectionContactAboutMeComponet.module.scss
@@ -1,3 +1,10 @@
 .container{
     width: 100%;
 }
+.section {
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .section.hide {
+    opacity: 0;
+  }
