--- a/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
+++ b/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
@@ -1,5 +1,21 @@
 .container {
-    background-size: cover;
+    width: 100%;
+    height: 75vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+
+    &::-webkit-scrollbar {
+        width: 0;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: transparent;
+    }
 
     .content-wrapper {
         width: 100%;
@@ -8,6 +24,8 @@
         align-items: center;
 
         .content {
+            width: 100%;
+            margin-top: 32px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -15,49 +33,16 @@
             .logo {
                 height: 50px;
             }
-
-            .list-container {
-
-                margin-top: 32px;
-
-                .list {
-                    display: flex;
-                    overflow-y: scroll;
-                    scrollbar-width: none; 
-                    -ms-overflow-style: none; 
-                    height: 64px;
-                    flex-direction: column;
-                    align-items: center;
-
-                    &::-webkit-scrollbar{
-                        display: none;
-                    }
-
-                    .item{
-                        margin-top: 24px;
-                    }
-                }
-
-                .dots-container {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    margin-top: 10px;
-
-                    .dot {
-                        height: 10px;
-                        width: 10px;
-                        background-color: #bbb;
-                        border-radius: 50%;
-                        margin: 0 5px;
-                        cursor: pointer;
-
-                        &:hover {
-                            background-color: #717171;
-                        }
-                    }
-                }
-            }
+        }
+        .gallery{
+            width: 100%;
         }
     }
 }
+.section {
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .section.hide {
+    opacity: 0;
+  }
