--- a/src/app/views/public/pages/about-me/AboutMePage.module.scss
+++ b/src/app/views/public/pages/about-me/AboutMePage.module.scss
@@ -1,3 +1,11 @@
 .container{
     width: 100%;
+    .section {
+        transition: opacity 1s ease-in-out;
+      }
+      
+      .section.hide {
+        opacity: 0;
+      }
+    
     }
