--- a/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
+++ b/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
@@ -1,41 +1,23 @@
 .container {
     width: 100%;
-    height: 75vh;
-    overflow: scroll;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-
-    &::-webkit-scrollbar {
-        width: 0;
-    }
-
-    &::-webkit-scrollbar-track {
-        background-color: transparent;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: transparent;
-    }
+    background: linear-gradient(180deg, #001339 0%, #1E1E1E 100%);
 
     .content-wrapper {
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
 
         .content {
-            width: 100%;
-            margin-top: 32px;
             display: flex;
             flex-direction: column;
+            justify-content: center;
             align-items: center;
+            color: white;
 
-            .logo {
-                height: 50px;
+            h2 {
+                margin: 64px;
             }
         }
         .gallery{
-            width: 100%;
+            margin-top: 64px;
         }
     }
 }
