--- a/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
+++ b/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    background: linear-gradient(180deg, #001339 0%, #1E1E1E 100%);
+    background: linear-gradient(180deg, #060B16 0%, #1E1E1E 100%);
 
     .content-wrapper {
         width: 100%;
