Custom Reactflow Implemented

--- a/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
+++ b/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
@@ -18,6 +18,14 @@
         }
         .gallery{
             margin-top: 64px;
+            color: white;
+
+            .flowchart-heading{
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                margin-bottom: 32px;
+            }
         }
     }
 }
