--- a/src/app/components/public/section-banner-about-me/SectionBannerAboutMeComponent.module.scss
+++ b/src/app/components/public/section-banner-about-me/SectionBannerAboutMeComponent.module.scss
@@ -2,11 +2,10 @@
     display: flex;
     align-items: center;
     width: 100%;
-    // background: url('../../../../assets/images/ImgPatternBg.svg'), linear-gradient(180deg, rgba(87, 149, 241, 0.00)70.84%, rgba(0, 72, 180, 0.09) 100%), #F4F4F5;
     background: url('../../../../assets/images/ImgPatternBg.svg'),  #1e1e1e;
     background-size: cover;
     background-position: center;
-    min-height: 75vh;
+    min-height: 100vh;
 
     .content {
         display: flex;
@@ -20,6 +19,10 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+
+            h1{
+                font-size: 60px;
+            }
 
             p {
                 letter-spacing: 0.5px;
