--- a/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
+++ b/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
@@ -17,7 +17,6 @@
             }
         }
         .gallery{
-            margin-top: 64px;
             color: white;
 
             .flowchart-heading{
@@ -25,6 +24,7 @@
                 display: flex;
                 justify-content: center;
                 margin-bottom: 32px;
+                font-weight: 500;
             }
         }
     }
