--- a/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
+++ b/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
@@ -16,7 +16,7 @@
             justify-content: center;
             align-items: center;
             color: white;
-            margin: 64px;
+            margin-top: 64px;
 
             .heading{
                 margin-bottom: 64px;
