--- a/src/app/components/atoms/ui-component/fancy-scroll/FancyScrollComponent.module.scss
+++ b/src/app/components/atoms/ui-component/fancy-scroll/FancyScrollComponent.module.scss
@@ -1,50 +1,67 @@
 .container {
-  width: 100%;
-  height: 50vh;
+    width: 100%;
+    height: 50vh;
 
-  .content-wrapper {
-      display: flex;
-      margin-top: 64px;
+    .content-wrapper {
+        display: flex;
+        margin-top: 64px;
 
-      .content {
-          display: flex;
-          width: 50vw;
-          padding-left: 32px;
-          flex-direction: column;
-          color: white;
+        .content {
+            display: flex;
+            width: 50vw;
+            padding-left: 32px;
+            flex-direction: column;
+            color: white;
 
-          .heading {
-              margin-bottom: 6px;
-          }
-      }
+            .heading {
+                margin-bottom: 6px;
+            }
+        }
 
-      .image {
-          width: 50vw;
-          will-change: opacity; 
-      }
+        .image {
+            width: 50vw;
+            will-change: opacity;
+        }
 
-      .fixed {
-          position: sticky;
-          top: 50%;
-          right: 0;
-      }
+        .fixed {
+            position: sticky;
+            top: 50%;
+            right: 0;
+        }
 
-      .img-enter {
-          opacity: 0.5;
-          transition: opacity 500ms ease-in; 
-      }
+        .img-enter {
+            opacity: 0.5;
+            transition: opacity 500ms ease-in;
+        }
 
-      .img-enter-active {
-          opacity: 1;
-      }
+        .img-enter-active {
+            opacity: 1;
+        }
 
-      .img-exit {
-          opacity: 0.5;
-          transition: opacity 500ms ease-out; 
-      }
+        .img-exit {
+            opacity: 0.5;
+            transition: opacity 500ms ease-out;
+        }
 
-      .img-exit-active {
-          opacity: 0;
-      }
-  }
+        .img-exit-active {
+            opacity: 0;
+        }
+    }
+
+    @media only screen and (max-width: 767px) {
+        .content-wrapper {
+            height: 100vh;
+
+            .content {
+                width: 100vw;
+                padding: 32px;
+            }
+
+            .fixed {
+                width: 80%;
+                position: fixed;
+                bottom: 0;
+            }
+        }
+    }
 }
