--- a/src/app/components/atoms/ui-component/fancy-scroll/FancyScrollComponent.module.scss
+++ b/src/app/components/atoms/ui-component/fancy-scroll/FancyScrollComponent.module.scss
@@ -5,6 +5,7 @@
     .content-wrapper {
         display: flex;
         margin-top: 64px;
+        padding-left: 50px;
 
         .content {
             display: flex;
@@ -51,6 +52,7 @@
     @media only screen and (max-width: 767px) {
         .content-wrapper {
             height: 100vh;
+            padding-left: 32px;
 
             .content {
                 width: 100vw;
