minor css changes

--- a/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
+++ b/src/app/components/public/section-employement-about-me copy/SectionEmployementAboutMeComponent.module.scss
@@ -20,6 +20,8 @@
 
             .heading{
                 margin-bottom: 64px;
+                font-weight: 500;
+                font-size: 32px;
             }
             
         }
