--- a/src/app/components/public/section-expertise-about-me/SectionExpertiseAboutMeComponent.module.scss
+++ b/src/app/components/public/section-expertise-about-me/SectionExpertiseAboutMeComponent.module.scss
@@ -11,6 +11,11 @@
     padding: 64px 0px;
     color: white;
 
+    .heading {
+        margin-bottom: 64px;
+        font-weight: 500;
+        font-size: 32px;
+    }
 
     .card-wrapper {
         margin-top: 32px;
