--- a/src/app/components/atoms/ui-component/card-component/CardComponent.module.scss
+++ b/src/app/components/atoms/ui-component/card-component/CardComponent.module.scss
@@ -35,7 +35,7 @@
       height: 48px;
       font-size: 20px;
       color: white;
-      font-weight: bold;
+      font-weight: 400;
       text-align: center;
     }
 
