--- a/src/app/components/atoms/ui-component/fancy-scroll/FancyScrollComponent.module.scss
+++ b/src/app/components/atoms/ui-component/fancy-scroll/FancyScrollComponent.module.scss
@@ -5,17 +5,26 @@
     .content-wrapper {
         display: flex;
         margin-top: 64px;
-        padding-left: 50px;
+        padding: 0px 50px;
 
         .content {
             display: flex;
             width: 50vw;
-            padding-left: 32px;
             flex-direction: column;
             color: white;
 
             .heading {
                 margin-bottom: 6px;
+                font-size: 20px;
+                font-weight: 400;
+            }
+
+            .description {
+                letter-spacing: 1px;
+                line-height: 24px;
+                font-size: 16px;
+                font-weight: 400;
+
             }
         }
 
@@ -52,11 +61,9 @@
     @media only screen and (max-width: 767px) {
         .content-wrapper {
             height: 100vh;
-            padding-left: 32px;
 
             .content {
                 width: 100vw;
-                padding: 32px;
             }
 
             .fixed {
