--- a/src/app/components/public/section-banner-about-me/SectionBannerAboutMeComponent.module.scss
+++ b/src/app/components/public/section-banner-about-me/SectionBannerAboutMeComponent.module.scss
@@ -21,13 +21,14 @@
             align-items: center;
 
             h1{
-                font-size: 60px;
+                font-size: 42px;
             }
 
             p {
-                letter-spacing: 0.5px;
+                letter-spacing: 1px;
                 line-height: 24px;
                 font-size: 14px;
+                font-weight: 400;
 
             }
 
@@ -94,8 +95,13 @@
                 max-width: 900px;
                 margin-left: 32px;
 
+                h1{
+                    font-size: 60px;
+                }
+
                 .text {
                     font-size: 16px;
+                    font-weight: 400;
                 }
             }
         }
