--- a/src/app/components/atoms/ui-component/slideshow-component/SlideShowComponent.module.scss
+++ b/src/app/components/atoms/ui-component/slideshow-component/SlideShowComponent.module.scss
@@ -1,19 +1,15 @@
 .container {
   width: 100%;
-  height: 400px; 
-  overflow: hidden;
 }
 
 .content-wrapper {
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .image {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  max-height: 100vh;
   object-fit: cover;
 }
