--- a/src/app/components/public/section-projects-about-me/SectionProjectsAboutMeComponet.module.scss
+++ b/src/app/components/public/section-projects-about-me/SectionProjectsAboutMeComponet.module.scss
@@ -1,10 +1,16 @@
 .container{
-    width: 100%;
+        width: 100%;
     
     .content-wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         color: white;
-        padding: 50px;
 
-       
+        .heading{
+            margin: 64px 0px;
+            font-weight: 500;
+            font-size: 32px;
+        }
     }
 }
