react Rechart Component Issues Fixed

--- a/src/app/components/atoms/ui-component/rechart-component/RechartsComponent.module.scss
+++ b/src/app/components/atoms/ui-component/rechart-component/RechartsComponent.module.scss
@@ -8,9 +8,9 @@
     justify-content: center;
     
     .content{
-        width: 100%;
         box-sizing: border-box;
         height: 100%;
         display: flex;
+        color: black;
     }
 }
