--- a/src/app/components/public/section-projects-about-me/SectionProjectsAboutMeComponet.module.scss
+++ b/src/app/components/public/section-projects-about-me/SectionProjectsAboutMeComponet.module.scss
@@ -12,5 +12,10 @@
             font-weight: 500;
             font-size: 32px;
         }
+        .slideShow{
+            width: 100%;
+            box-sizing: border-box;
+            height: auto ;
+        }
     }
 }
