--- a/src/app/components/atoms/ui-component/slideshow-component/SlideShowComponent.module.scss
+++ b/src/app/components/atoms/ui-component/slideshow-component/SlideShowComponent.module.scss
@@ -1,15 +1,19 @@
 .container {
-  width: 100%;
-}
-
-.content-wrapper {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.image {
-  width: 100%;
+  width: auto;
   max-height: 100vh;
-  object-fit: cover;
+  box-sizing: border-box;
+  display: flex;
+
+  .content-wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+
+    .image {
+      width: 100%;
+      max-height: 100vh;
+      object-fit: cover;
+    }
+  }
 }
