--- a/src/app/components/public/section-contact-about-me/SectionContactAboutMeComponet.module.scss
+++ b/src/app/components/public/section-contact-about-me/SectionContactAboutMeComponet.module.scss
@@ -1,6 +1,7 @@
 .container{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    color: white;
+    h2{
+        width: 100%;
+        text-align: center;
+    }
 }
