--- a/src/app/components/public/public-footer/PublicFooterComponent.module.scss
+++ b/src/app/components/public/public-footer/PublicFooterComponent.module.scss
@@ -1,7 +1,11 @@
 .container {
     width: 100%;
-    display: flex;
     height: 64px;
-    justify-content: center;
+    background-color: white;
     border-top: 1px solid rgba(128, 128, 128, 0.199);
+    .content{
+        color: black;
+        width: 100%;
+        text-align: center;
+    }
 }
